lab_01: добавлена фильтрация избранных и mapper серверов dto <-> bl
